--- a/template/cart.html
+++ b/template/cart.html
@@ -48,7 +48,9 @@
                             <h6 class="mb-0">₹{{cartItem.item__price}}</h6>
                           </div>
                           <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="#!" class="text-muted"><i class="bi bi-x"></i></a>
+                            <button class="btn btn-link text-muted" ng-click="removefromcart(cartItem)">
+                              <i class="bi bi-x"></i>
+                            </button>                            
                           </div>
                         </div>
       
