--- a/template/cart.html
+++ b/template/cart.html
@@ -1,88 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopify</title>
-    <link rel="stylesheet" href="../style/cartStyle.css">
-</head>
-<body>
-    <section class="h-100 h-custom">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12">
-              <div class="card card-registration card-registration-2" style="border-radius: 15px;">
-                <div class="card-body p-0">
-                  <div class="row g-0">
-                    <div class="col-lg-8" style="background-color: #c9e186;">
-                      <div class="p-5">
-                        <div class="d-flex justify-content-between align-items-center mb-5">
-                          <h1 class="fw-bold mb-0 text-black">Shopping Cart</h1>
-                        </div>
-                        <hr class="my-4">
-      
-                        <div class="row mb-4 d-flex justify-content-between align-items-center" ng-repeat="cartItem in cartItems">
-                          <div class="col-md-2 col-lg-2 col-xl-2">
-                            <img
-                              src="https://10.21.86.182:8000/media/{{cartItem.item__image}}"
-                              class="img-fluid rounded-3" alt="Cotton T-shirt">
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-black mb-0">{{cartItem.item__product_name}}</h6>
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                            <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                              <i class="bi bi-dash"></i>
-                            </button>
-      
-                            <input id="form1" min="0" name="quantity" value="1" type="number"
-                              class="form-control form-control-sm" />
-      
-                            <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                              <i class="bi bi-plus"></i>
-                            </button>
-                          </div>
-                          <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                            <h6 class="mb-0">₹{{cartItem.item__price}}</h6>
-                          </div>
-                          <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <button class="btn btn-link text-muted" ng-click="removefromcart(cartItem)">
-                              <i class="bi bi-x"></i>
-                            </button>                            
-                          </div>
-                        </div>
-      
-                        <hr class="my-4">
-      
-                        <div class="pt-5">
-                          <h6 class="mb-0"><a href="#!" class="text-body"><i class="bi bi-arrow-left"></i>Back to shop</a></h6>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 bg-grey">
-                      <div class="p-5">
-                        <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
-                        <hr class="my-4">
 
-                            <div class="d-flex justify-content-between mb-5">
-                                <h5 class="text-uppercase">Total Price</h5>
-                                <h5>₹{{totalPrice}}</h5>
-                            </div>
-                        <hr class="my-4">
-      
-                        <button type="button" class="btn btn-dark btn-block btn-lg"
-                          data-mdb-ripple-color="dark" ng-click="order()">Buy now</button>
-      
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shopify</title>
+  <link rel="stylesheet" href="../style/cartStyle.css" />
+</head>
+
+<body>
+  <section class="h-100 h-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12">
+          <div class="card card-registration card-registration-2" style="border-radius: 15px">
+            <div class="card-body p-0">
+              <div class="row g-0">
+                <div class="col-lg-8" style="background-color: #c9e186">
+                  <div class="p-5">
+                    <div class="d-flex justify-content-between align-items-center mb-5">
+                      <h1 class="fw-bold mb-0 text-black">Shopping Cart</h1>
+                    </div>
+                    <hr class="my-4" />
+
+                    <div class="row mb-4 d-flex justify-content-between align-items-center"
+                      ng-repeat="cartItem in cartItems">
+                      <div class="col-md-2 col-lg-2 col-xl-2">
+                        <img src="https://10.21.86.182:8000/media/{{cartItem.item__image}}"
+                          class="img-fluid rounded-3" />
+                      </div>
+                      <div class="col-md-3 col-lg-3 col-xl-3">
+                        <h6 class="text-black mb-0">
+                          {{cartItem.item__product_name}}
+                        </h6>
+                      </div>
+                      <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                        <button class="btn btn-link px-2"
+                          onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                          <i class="bi bi-dash"></i>
+                        </button>
+
+                        <div class="input-group input-group-sm">
+                          <input id="form{{$index}}" min="1" name="quantity" value="{{cartItem.quantity}}" type="number"
+                            class="form-control" style="width: 60px" ng-model="cartItem.productQuantity"
+                            ng-change="updateQuantity(cartItem)" />
+                        </div>
+
+                        <button class="btn btn-link px-2"
+                          onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                          <i class="bi bi-plus"></i>
+                        </button>
+                      </div>
+                      <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                        <h6 class="mb-0">₹{{cartItem.item__price}}</h6>
+                      </div>
+
+                      <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                        <button class="btn btn-link text-muted" ng-click="removefromcart(cartItem)">
+                          <i class="bi bi-x"></i>
+                        </button>
                       </div>
                     </div>
+
+                    <hr class="my-4" />
+
+                    <div class="pt-5">
+                      <h6 class="mb-0">
+                        <a ui-sref="Home" class="text-body"><i class="bi bi-arrow-left"></i>Back to shop</a>
+                      </h6>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 bg-grey">
+                  <div class="p-5">
+                    <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
+                    <hr class="my-4" />
+                    <div class="d-flex justify-content-between mb-5">
+                      <h5 class="text-uppercase">Total Price</h5>
+                      <h5>₹{{totalPrice}}</h5>
+                    </div>
+                    <hr class="my-4" />
+
+                    <button type="button" class="btn btn-dark btn-block btn-lg" data-mdb-ripple-color="dark"
+                      ng-click="order(cartItems)">
+                      Buy now
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
